force-app/main/default/objects/System_Config__c/fields/Property_Backup_Scan_Range_Days__c.field-meta.xml
<CustomField>
    <fullName>Property_Backup_Scan_Range_Days__c</fullName>
    <defaultValue>7</defaultValue>
    <label>Property Backup Scan Range (Days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>