force-app/main/default/objects/System_Config__c/fields/Property_Import_Endpoint__c.field-meta.xml
<CustomField>
    <fullName>Property_Import_Endpoint__c</fullName>
    <label>Property Import Endpoint</label>
    <length>255</length>
    <type>Text</type>
</CustomField>